--- a/templates/client/booking_and_promotions/bookme.html
+++ b/templates/client/booking_and_promotions/bookme.html
@@ -1,7 +1,14 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}CRUELTOUCH | {% trans "Book me" %}{% endblock %}
+{% block title %}{% trans "Book me" %}{% endblock %}
+{% block canonical %}{% url 'client:book_me' %}{% endblock %}
+{% block description %}
+    {% blocktrans %}Book your photography session with Crueltouch and experience the difference. Professional,
+        personalized service and stunning results. Schedule now.{% endblocktrans %}
+{% endblock %}
+{% block content %}
+{% endblock %}
 {% block customCSS %}
     <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css"/>
     <link rel="stylesheet"
