Uses of thumbnail instead of original file on admin page Instead of loading all the original file when checking which photos a client liked, admin sees a bunch of thumbnail created if they weren't created on file adding. Client still see original file, this have to change.

--- a/templates/client/client_view/photo_details.html
+++ b/templates/client/client_view/photo_details.html
@@ -21,7 +21,7 @@
                                 {% for photo in album.get_photos %}
                                     <label for="photofav{{ forloop.counter }}" class="img-container">
                                         <div class="watermarked" data-watermark="CRUELTOUCH">
-                                            <img src="{{ photo.file.url }}" alt="" class="actual-img">
+                                            <img src="{{ photo.get_url }}" alt="" class="actual-img">
                                         </div>
                                         <div class="overlay">
                                             <span class="img-id-text">{{ photo.id }}</span> &nbsp;
