--- a/templates/administration/list/list_album_client_photos.html
+++ b/templates/administration/list/list_album_client_photos.html
@@ -40,8 +40,12 @@
                     {% for photo in photos_liked %}
                         <div style="margin: 5px">
                             <div>
-                                <img src="{{ photo.file.url }}" alt="" style="height: 150px">
-                                <p style="max-width: 200px">{{ photo.file.name }}</p>
+                                <a href="{{ photo.file.url }}" class="portfolio-item img-popup set-bg"
+                                   data-setbg="{{ photo.file.url }}" target="_blank">
+                                    <img src="{{ photo.get_thumbnail_url }}" alt="" style="height: 150px">
+                                </a>
+
+                                <p style="max-width: 200px">{{ photo.get_name }}</p>
                             </div>
                             <br><br>
                         </div>
@@ -58,7 +62,10 @@
                     {% for photo in photos_not_liked %}
                         <div style="margin: 5px">
                             <div>
-                                <img src="{{ photo.file.url }}" alt="" style="height: 150px">
+                                <a href="{{ photo.file.url }}" class="portfolio-item img-popup set-bg"
+                                   data-setbg="{{ photo.file.url }}" target="_blank">
+                                    <img src="{{ photo.get_thumbnail_url }}" alt="" style="height: 150px">
+                                </a>
                             </div>
                             <br><br>
                         </div>
