--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -77,6 +77,9 @@
             <li>
                 <a href="#">{% trans "Book Me" %}</a>
                 <ul class="sub-menu">
+                    {% if request.user.is_authenticated %}
+                        <li><a href="{% url 'homepage:services_offered' %}">{% trans "Services" %}</a></li>
+                    {% endif %}
                     <li><a href="{% url 'client:book_me' %}">{% trans "Book Me" %}</a></li>
                     <li><a href="{% url 'homepage:promotions' %}">{% trans "Latest Promotions" %}</a></li>
                 </ul>
