--- a/templates/client/booking_and_promotions/bookme.html
+++ b/templates/client/booking_and_promotions/bookme.html
@@ -156,7 +156,7 @@
                             {{ form.desired_date }}
                         </div>
                         <div>
-                            <label for="email">{% trans "City and State" %} * : </label>
+                            <label for="id_address">{% trans "City and State" %} * : </label>
                             {{ form.address }}
                         </div>
                         <div>
