client can pay via credit card or paypal logging system changed for production in settings.py

--- a/templates/appointments/appointment_payment.html
+++ b/templates/appointments/appointment_payment.html
@@ -10,6 +10,11 @@
 {% block description %}
     Checkout payment for the service {{ appointment.get_service_name }}
 {% endblock %}
+{% block scriptHead %}
+    <script src="https://www.paypal.com/sdk/js?components=buttons,hosted-fields&client-id={{ client_id }}"
+            data-client-token="{{ client_token }}"
+    ></script>
+{% endblock %}
 {% block body %}
     <div class="main-container">
         <div class="body-container">
@@ -25,10 +30,7 @@
                 {% csrf_token %}
                 <div class="appointment-user-info">
                     <div class="appointment-user-info-title">
-                        <div class="title">
-                            This is where you process the payment via PayPal and/or credit card.
-                            Easy with a business PayPal account.
-                        </div>
+                        <div id="paypal-button-container" class="paypal-button-container"></div>
                     </div>
 
                 </div>
@@ -66,7 +68,8 @@
                     </div>
                     <div class="securePayment">
                         <?xml version="1.0"?>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="15px" height="15px" class="padlock">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="15px" height="15px"
+                             class="padlock">
                             <path d="M 15 2 C 11.145666 2 8 5.1456661 8 9 L 8 11 L 6 11 C 4.895 11 4 11.895 4 13 L 4 25 C 4 26.105 4.895 27 6 27 L 24 27 C 25.105 27 26 26.105 26 25 L 26 13 C 26 11.895 25.105 11 24 11 L 22 11 L 22 9 C 22 5.2715823 19.036581 2.2685653 15.355469 2.0722656 A 1.0001 1.0001 0 0 0 15 2 z M 15 4 C 17.773666 4 20 6.2263339 20 9 L 20 11 L 10 11 L 10 9 C 10 6.2263339 12.226334 4 15 4 z"/>
                         </svg>
                         <p>Secure Checkout</p>
@@ -78,6 +81,39 @@
 {% endblock %}
 {% block customJS %}
     <script>
+        const appointment_id = "{{ appointment.pk }}";
+
+        const createOrderURLTemplate = "{% url 'appointment:create_order' appointment_id=0 %}";
+        const captureOrderURLTemplate = "{% url 'appointment:capture_order' order_id='0' %}";
+
+        const createOrderURL = createOrderURLTemplate.replace("0", appointment_id);
+        paypal.Buttons({
+            createOrder: function (data, actions) {
+                // Use the createOrderURL instead of the hardcoded URL
+                return fetch(createOrderURL, {
+                    method: "POST",
+                })
+                    .then((response) => response.json())
+                    .then((order) => order.id);
+            },
+
+            onApprove: function (data, actions) {
+                // Replace the 0 with the data.orderID in the captureOrderURL
+                const captureOrderURL = captureOrderURLTemplate.replace("0", data.orderID);
+
+                // Use the captureOrderURL instead of the hardcoded URL
+                return fetch(captureOrderURL, {
+                    method: "POST",
+                })
+                    .then((response) => response.json())
+                    .then((orderData) => {
+                        console.log("Capture result", orderData, JSON.stringify(orderData, null, 2));
+                        // Display a success message or redirect to a success page.
+                        window.location.href = `{% url 'appointment:payment_success' appointment_id=appointment.pk order_id='0' %}`.replace('0', data.orderID);
+                    });
+            },
+        }).render("#paypal-button-container");
+
         document.addEventListener('DOMContentLoaded', function () {
             const messageElements = document.querySelectorAll('.alert-dismissible');
             setTimeout(function () {
@@ -88,3 +124,4 @@
         });
     </script>
 {% endblock %}
+
