--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -40,6 +40,7 @@
     <script href="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script href="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <!--[endif]-->
+    {% block scriptHead %}{% endblock %}
 
 </head>
 <body>
