--- a/templates/administration/add/invoice_form.html
+++ b/templates/administration/add/invoice_form.html
@@ -5,7 +5,7 @@
 {% block body %}
     <section class="content content-wrapper">
         <div class="container-fluid">
-            <div class="row" style="margin: 0 auto; padding-top: 20px">
+            <div class="row" style="margin: 0 auto; padding-top: 20px; padding-bottom: 20px">
                 <h2>Create Invoice</h2>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
