--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -91,8 +91,11 @@
                 <ul class="sub-menu">
                     <li><a href="{% url 'client:login' %}">{% trans "View Your Images" %}</a></li>
                     <li><a href="{% url 'client:register' %}">{% trans "Registration" %}</a></li>
-                    <li><a href="{% url 'administration:login' %}">{% trans "Admin Login" %}</a></li>
+                    {% if not request.user.is_authenticated%}
+                        <li><a href="{% url 'administration:login' %}">{% trans "Admin Login" %}</a></li>
+                    {% endif %}
                     {% if request.user.is_authenticated %}
+                        <li><a href="{% url 'administration:index' %}">{% trans 'Admin Dashboard' %}</a></li>
                         <li><a href="{% url 'client:logout' %}">{% trans "Logout" %}</a></li>
                     {% endif %}
                 </ul>
